cabal-version:      1.18
build-type:         Simple
name:               swiss
version:            0.0.1
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Chris Sze <chris@gate-max.com>
maintainer:         Chris Sze <chris@gate-max.com>
copyright:          GATE MAX CORPORATION 2021-2022
synopsis:           Basic functions for development with Core libraries and GHC boot libraries dependencies.
description:
    A library of extra functions for the standard Haskell Core libraries.
homepage:           https://github.com/gate-max/swiss
bug-reports:        https://github.com/gate-max/swiss/issues

extra-doc-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/gate-max/swiss.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base >= 4.9 && < 6,

    exposed-modules:
        Swiss
        Data.List.Swiss
        
