cabal-version:      1.18
build-type:         Simple
name:               swiss
version:            0.0.1
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Chris Sze <chris@gate-max.com>
maintainer:         Chris Sze <chris@gate-max.com>
copyright:          GATE MAX CORPORATION 2021-2022
synopsis:           Basic functions for development
description:
    A library of extra functions for the standard Haskell Core libraries.
homepage:           https://github.com/gate-max/swiss
bug-reports:        https://github.com/gate-max/swiss/issues

extra-doc-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/gate-max/swiss.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base          >= 4.14.1 && < 6,
        bytestring    >= 0.10.12 && < 2,
        deepseq       >= 1.4.4 && < 3,
        parallel      >= 3.2.2 && < 5, 
        time          >= 1.9.3 && < 3


    exposed-modules:
        Swiss
        Control.Exception.Swiss
        Data.ByteString.Lazy.Swiss
        Data.Char.Swiss
        Data.List.Swiss
        Data.Time.Swiss
        Data.Tuple.Swiss
        GHC.Show.Swiss        
        Prelude.Swiss        
        SwissRobot.Writer
